cbits/Bullet.h

void btBroadphaseInterface_getAabb(void *c,void* p0,float* p1,float* p2); //method: getAabb void ( ::btBroadphaseInterface::* )( ::btBroadphaseProxy *,::btVector3 &,::btVector3 & ) const
void btBroadphaseInterface_aabbTest(void *c,float* p0,float* p1,void* p2); //method: aabbTest void ( ::btBroadphaseInterface::* )( ::btVector3 const &,::btVector3 const &,::btBroadphaseAabbCallback & ) 
void* btBroadphaseInterface_createProxy(void *c,float* p0,float* p1,int p2,void* p3,short int p4,short int p5,void* p6,void* p7); //method: createProxy ::btBroadphaseProxy * ( ::btBroadphaseInterface::* )( ::btVector3 const &,::btVector3 const &,int,void *,short int,short int,::btDispatcher *,void * ) 
void* btBroadphaseInterface_getOverlappingPairCache(void *c); //method: getOverlappingPairCache ::btOverlappingPairCache * ( ::btBroadphaseInterface::* )(  ) 
void* btBroadphaseInterface_getOverlappingPairCache0(void *c); //method: getOverlappingPairCache ::btOverlappingPairCache * ( ::btBroadphaseInterface::* )(  ) 
void* btBroadphaseInterface_getOverlappingPairCache1(void *c); //method: getOverlappingPairCache ::btOverlappingPairCache const * ( ::btBroadphaseInterface::* )(  ) const
void btBroadphaseInterface_destroyProxy(void *c,void* p0,void* p1); //method: destroyProxy void ( ::btBroadphaseInterface::* )( ::btBroadphaseProxy *,::btDispatcher * ) 
void* btBroadphasePair_new0(); //constructor: btBroadphasePair  ( ::btBroadphasePair::* )(  ) 
void* btBroadphasePair_new1(void* p0,void* p1); //constructor: btBroadphasePair  ( ::btBroadphasePair::* )( ::btBroadphaseProxy &,::btBroadphaseProxy & ) 
void btBroadphasePair_free(void *c);
 
// attribute not supported: //attribute: ::btBroadphasePair btBroadphasePair->
void btBroadphasePair_m_algorithm_set(void *c,void* a); //attribute: ::btCollisionAlgorithm * btBroadphasePair->m_algorithm
void* btBroadphasePair_m_algorithm_get(void *c); //attribute: ::btCollisionAlgorithm * btBroadphasePair->m_algorithm
void btBroadphasePair_m_pProxy0_set(void *c,void* a); //attribute: ::btBroadphaseProxy * btBroadphasePair->m_pProxy0
void* btBroadphasePair_m_pProxy0_get(void *c); //attribute: ::btBroadphaseProxy * btBroadphasePair->m_pProxy0
void btBroadphasePair_m_pProxy1_set(void *c,void* a); //attribute: ::btBroadphaseProxy * btBroadphasePair->m_pProxy1
void* btBroadphasePair_m_pProxy1_get(void *c); //attribute: ::btBroadphaseProxy * btBroadphasePair->m_pProxy1
void* btBroadphasePairSortPredicate_new(); //constructor: btBroadphasePairSortPredicate  ( ::btBroadphasePairSortPredicate::* )(  ) 
void btBroadphasePairSortPredicate_free(void *c);
 
void* btBroadphaseProxy_new0(); //constructor: btBroadphaseProxy  ( ::btBroadphaseProxy::* )(  ) 
void* btBroadphaseProxy_new1(float* p0,float* p1,void* p2,short int p3,short int p4,void* p5); //constructor: btBroadphaseProxy  ( ::btBroadphaseProxy::* )( ::btVector3 const &,::btVector3 const &,void *,short int,short int,void * ) 
void btBroadphaseProxy_free(void *c);
 
int btBroadphaseProxy_isConvex(int p0); //method: isConvex bool (*)( int )
int btBroadphaseProxy_isInfinite(int p0); //method: isInfinite bool (*)( int )
int btBroadphaseProxy_getUid(void *c); //method: getUid int ( ::btBroadphaseProxy::* )(  ) const
int btBroadphaseProxy_isConcave(int p0); //method: isConcave bool (*)( int )