Physics/Bullet/Raw/BulletCollision/BroadphaseCollision.chs

{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h?r=2223#59>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.cpp?r=2223>
-}
{#fun btBroadphaseInterface_getAabb as btBroadphaseInterface_getAabb'    `( BtBroadphaseInterfaceClass bc , BtBroadphaseProxyClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ proxy
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h?r=2223#63>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.cpp?r=2223>
-}
{#fun btBroadphaseInterface_aabbTest as btBroadphaseInterface_aabbTest    `( BtBroadphaseInterfaceClass bc , BtBroadphaseAabbCallbackClass p2 )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
, withBt* `p2'  -- ^ callback
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h?r=2223#63>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.cpp?r=2223>
-}
{#fun btBroadphaseInterface_aabbTest as btBroadphaseInterface_aabbTest'    `( BtBroadphaseInterfaceClass bc , BtBroadphaseAabbCallbackClass p2 )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
, withBt* `p2'  -- ^ callback
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h?r=2223#56>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.cpp?r=2223>
-}
{#fun btBroadphaseInterface_createProxy as btBroadphaseInterface_createProxy    `( BtBroadphaseInterfaceClass bc , BtDispatcherClass p6 )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
,  `Int'  -- ^ shapeType
, withVoidPtr* `VoidPtr'  -- ^ userPtr
,  `Int'  -- ^ collisionFilterGroup
,  `Int'  -- ^ collisionFilterMask
, withBt* `p6'  -- ^ dispatcher
, withVoidPtr* `VoidPtr'  -- ^ multiSapProxy
 } ->  `BtBroadphaseProxy'  mkBtBroadphaseProxy* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h?r=2223#56>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.cpp?r=2223>
-}
{#fun btBroadphaseInterface_createProxy as btBroadphaseInterface_createProxy'    `( BtBroadphaseInterfaceClass bc , BtDispatcherClass p6 )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
,  `Int'  -- ^ shapeType
, withVoidPtr* `VoidPtr'  -- ^ userPtr
,  `Int'  -- ^ collisionFilterGroup
,  `Int'  -- ^ collisionFilterMask
, withBt* `p6'  -- ^ dispatcher
, withVoidPtr* `VoidPtr'  -- ^ multiSapProxy
 } ->  `BtBroadphaseProxy'  mkBtBroadphaseProxy* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h?r=2223#68>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.cpp?r=2223>
-}
{#fun btBroadphaseInterface_getOverlappingPairCache0 as btBroadphaseInterface_getOverlappingPairCache    `( BtBroadphaseInterfaceClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtOverlappingPairCache'  mkBtOverlappingPairCache* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h?r=2223#68>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.cpp?r=2223>
-}
{#fun btBroadphaseInterface_getOverlappingPairCache0 as btBroadphaseInterface_getOverlappingPairCache0    `( BtBroadphaseInterfaceClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtOverlappingPairCache'  mkBtOverlappingPairCache* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h?r=2223#69>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.cpp?r=2223>
-}
{#fun btBroadphaseInterface_getOverlappingPairCache1 as btBroadphaseInterface_getOverlappingPairCache1    `( BtBroadphaseInterfaceClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtOverlappingPairCache'  mkBtOverlappingPairCache* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h?r=2223#57>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.cpp?r=2223>
-}
{#fun btBroadphaseInterface_destroyProxy as btBroadphaseInterface_destroyProxy    `( BtBroadphaseInterfaceClass bc , BtBroadphaseProxyClass p0 , BtDispatcherClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ proxy
, withBt* `p1'  -- ^ dispatcher
 } ->  `()'   #}
-- * btBroadphasePair
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#188>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphasePair_new0 as btBroadphasePair0    {  } -> `BtBroadphasePair' mkBtBroadphasePair* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#206>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphasePair_new1 as btBroadphasePair1    `( BtBroadphaseProxyClass p0 , BtBroadphaseProxyClass p1 )' =>     {  withBt* `p0' , withBt* `p1'  } -> `BtBroadphasePair' mkBtBroadphasePair* #}
{#fun btBroadphasePair_free    `( BtBroadphasePairClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#229>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphasePair_m_algorithm_set    `( BtBroadphasePairClass bc , BtCollisionAlgorithmClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#229>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphasePair_m_algorithm_get    `( BtBroadphasePairClass bc )' =>     { withBt* `bc'  } ->  `BtCollisionAlgorithm'  mkBtCollisionAlgorithm* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#226>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphasePair_m_pProxy0_set    `( BtBroadphasePairClass bc , BtBroadphaseProxyClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#226>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphasePair_m_pProxy0_get    `( BtBroadphasePairClass bc )' =>     { withBt* `bc'  } ->  `BtBroadphaseProxy'  mkBtBroadphaseProxy* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#227>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphasePair_m_pProxy1_set    `( BtBroadphasePairClass bc , BtBroadphaseProxyClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#227>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphasePair_m_pProxy1_get    `( BtBroadphasePairClass bc )' =>     { withBt* `bc'  } ->  `BtBroadphaseProxy'  mkBtBroadphaseProxy* #}
-- * btBroadphasePairSortPredicate
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#246>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphasePairSortPredicate_new as btBroadphasePairSortPredicate    {  } -> `BtBroadphasePairSortPredicate' mkBtBroadphasePairSortPredicate* #}
{#fun btBroadphasePairSortPredicate_free    `( BtBroadphasePairSortPredicateClass bc )' =>     { withBt* `bc'  } -> `()' #}
-- * btBroadphaseProxy
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#118>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphaseProxy_new0 as btBroadphaseProxy0    {  } -> `BtBroadphaseProxy' mkBtBroadphaseProxy* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#122>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphaseProxy_new1 as btBroadphaseProxy1    {  withVec3* `Vec3' , withVec3* `Vec3' , withVoidPtr* `VoidPtr' ,  `Int' ,  `Int' , withVoidPtr* `VoidPtr'  } -> `BtBroadphaseProxy' mkBtBroadphaseProxy* #}
{#fun btBroadphaseProxy_free    `( BtBroadphaseProxyClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#139>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphaseProxy_isConvex as btBroadphaseProxy_isConvex    `( )' =>     {   `Int'  -- ^ proxyType
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#164>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphaseProxy_isInfinite as btBroadphaseProxy_isInfinite    `( )' =>     {   `Int'  -- ^ proxyType
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#112>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphaseProxy_getUid as btBroadphaseProxy_getUid    `( BtBroadphaseProxyClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h?r=2223#149>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp?r=2223>
-}
{#fun btBroadphaseProxy_isConcave as btBroadphaseProxy_isConcave    `( )' =>     {   `Int'  -- ^ proxyType
 } ->  `Bool'   #}
